--- a/client/src/styles/components/Register.scss
+++ b/client/src/styles/components/Register.scss
@@ -1,4 +1,4 @@
-form{
+form {
   input {
     width: 100%;
     border: none;
@@ -12,16 +12,34 @@ form{
     background-color: transparent;
     color: #ebeae6;
     text-indent: 15px;
+
     &::placeholder {
       color: $light;
     }
+
     &:focus {
       outline: none;
     }
   }
 }
 
+
+.container {
+  @extend %flex-fill;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px;
+}
+
+
 .link-btn {
   text-decoration: none;
 }
 
+.regl {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  padding: 0 12px;
+}
